--- a/pizza-ordedring-app/pom.xml
+++ b/pizza-ordedring-app/pom.xml
@@ -42,6 +42,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!--Added for passwordHash -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-crypto</artifactId>
+		    <version>5.6.1</version>
+		</dependency>
 		<!--Added for dotenv -->
 		<dependency>
 		    <groupId>io.github.cdimascio</groupId>
